# p2p-llm-tunnel

./: .gitignore  Justfile  README.md  test-local.sh
scripts/: README.md  test-local.sh  test-tunnel.sh
signal-server/: Dockerfile  README.md  fly.toml  package-lock.json  package.json
signal-server/src/: index.ts
tmp/: mock_llm.py  test_upstream.py
tunnel/: Cargo.toml
tunnel/src/: cli.rs  main.rs  protocol.rs  proxy.rs  rtc.rs  serve.rs  signaling.rs
